--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,17 @@ after_success:
     - docker push pivert/multi-nginx
     - docker push pivert/multi-server
     - docker push pivert/multi-worker
+
+
+deploy:
+    provider: elasticbeanstalk
+    region: "eu-central-1"
+    app: "multi-docker"
+    env: "MultiDocker-env"
+    bucket_name: "elasticbeanstalk-eu-central-1-091723652300"
+    bucket_path: "multi-docker"
+    on:
+        branch: master
+    access_key_id: "$AWS_ACCESS_KEY"
+    secret_access_key:
+        secure: "$AWS_SECRET_KEY"
